# implicitquotas

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: synth_data.csv
notebooks/: 00_demon.ipynb  01_replication.ipynb  temp.py
src/implicitquotas/: __init__.py  analysis.py  bootstrap.py  core.py  plotting.py
