[build-system]
# the PEP 517 build backend; here we use hatchling (lightweight, no setup.py needed)
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "implicitquotas"           # package name on PyPI (if you publish)
version = "0.1.0"                 # bump for each release
description = "Analysis tools for implicit quotas research"
readme = "README.md"              # relative path to your README
license = { file = "LICENSE" }    # choose your license

requires-python = ">=3.10"        # or whatever minimum you need

# runtime dependencies; pip will install these automatically
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.8",
  "seaborn>=0.12",
  "matplotlib>=3.6",
  "joblib>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "ruff",
  "ipykernel",        # so your notebooks can launch this env
]

docs = [
  "mkdocs",
  "mkdocs-material"
]